test/failing/failing_printf.c
int main()
{
    float num;
    scanf("%d", &num;
    scanf("%f", &num];
    scanf(" %c", &num);
    printf("You entered: %c\n", num}
